# sisop2

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
client/: CMakeLists.txt
client/include/: FrontendThread.hpp  command_parser.hpp  dropboxClient.hpp  file_watcher.hpp  iclient.hpp  login_command_parser.hpp  shell.hpp  shell_command_parser.hpp  sync_thread.hpp
client/src/: FrontendThread.cpp  command_parser.cpp  dropboxClient.cpp  file_watcher.cpp  login_command_parser.cpp  main.cpp  shell.cpp  shell_command_parser.cpp  sync_thread.cpp
client/test/: CMakeLists.txt  client_test.cpp
cmake/: HunterGate.cmake
include/: dropboxClient.h
server/: CMakeLists.txt
server/include/: ClientThread.hpp  ClientThreadPool.hpp  PrimaryServerConnectivityDetectorThread.hpp  backup_file_sync_thread.hpp  backup_sync_thread.hpp  dropboxServer.hpp  server_login_parser.hpp
server/src/: ClientThread.cpp  ClientThreadPool.cpp  PrimaryServerConnectivityDetectorThread.cpp  backup_file_sync_thread.cpp  backup_sync_thread.cpp  dropboxServer.cpp  main.cpp  server_login_parser.cpp
server/test/: CMakeLists.txt  server_test.cpp
src/: dropboxServer.h  dropboxUtil.h  main.cpp  udpRec.cpp  udpTr.cpp  udp_rec.cpp  udp_tr.cpp
util/: CMakeLists.txt
util/include/: File.hpp  LoggerFactory.hpp  StringFormatter.hpp  dropboxUtil.hpp  lock_guard.hpp  logger_wrapper.hpp  pthread_wrapper.hpp  string_formatter.hpp  table_printer.hpp
util/src/: File.cpp  LoggerFactory.cpp  dropboxUtil.cpp  table_printer.cpp
util/test/: CMakeLists.txt  util_test.cpp
util/test/files/: in_ascii.txt  in_utf8.txt
